--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # Core
 streamlit==1.31.0
-python-dotenv==1.0.0
 
-# Google APIs
+# Google APIs - IMPORTANTE: Incluir google-api-python-client
 google-auth==2.27.0
 google-auth-oauthlib==1.2.0
 google-auth-httplib2==0.2.0
+google-api-python-client==2.116.0
 google-analytics-data==0.18.4
 
 # Data processing
@@ -19,3 +19,6 @@ seaborn==0.13.1
 
 # Utils
 pytz==2024.1
+
+# Optional: Para exportar a Excel
+openpyxl==3.1.2
