--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,13 @@
-# Core
-streamlit==1.31.0
-
-# Google APIs - IMPORTANTE: Incluir google-api-python-client
-google-auth==2.27.0
-google-auth-oauthlib==1.2.0
-google-auth-httplib2==0.2.0
-google-api-python-client==2.116.0
-google-analytics-data==0.18.4
-
-# Data processing
-pandas==2.2.0
-numpy==1.26.3
-
-# Visualization
-plotly==5.18.0
-matplotlib==3.8.2
-seaborn==0.13.1
-
-# Utils
-pytz==2024.1
-
-# Optional: Para exportar a Excel
-openpyxl==3.1.2
+streamlit
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+google-api-python-client
+google-analytics-data
+pandas
+numpy
+plotly
+matplotlib
+seaborn
+pytz
+openpyxl
