--- a/.gitignore
+++ b/.gitignore
@@ -1,83 +1,66 @@
-# Byte-compiled / optimized / DLL files
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
 *.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
 *.egg
-MANIFEST
+*.egg-info/
+dist/
+build/
+.Python
 
-# PyInstaller
-*.manifest
-*.spec
+# Virtual environments
+venv/
+env/
+ENV/
+.venv
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
+# OS
+.DS_Store
+Thumbs.db
+
+# Streamlit
+.streamlit/secrets.toml
+.streamlit/config.toml
+
+# Credentials (IMPORTANTE)
+credentials.json
+token.json
+*.json
+
+# Logs
+*.log
+
+# Cache
+.cache/
 .pytest_cache/
 
-# Translations
-*.mo
-*.pot
+# Jupyter
+.ipynb_checkpoints/
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+# MyPy
+.mypy_cache/
+.dmypy.json
 
-# Flask stuff:
-instance/
-.webassets-cache
+# Coverage
+htmlcov/
+.coverage
+.coverage.*
 
-# Scrapy stuff:
-.scrapy
+# Data files (pueden ser pesados)
+*.csv
+*.xlsx
+*.db
+*.sqlite
 
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.pyth
+# Temporal
+tmp/
+temp/
+*.tmp
