--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ google-auth-oauthlib
 google-auth-httplib2
 google-api-python-client
 google-analytics-data
+google-analytics-admin
 pandas
 numpy
 plotly
