--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,9 @@ matplotlib
 seaborn
 pytz
 openpyxl
+
+# Nuevas dependencias para Fase 2 - Causal Impact
+pycausalimpact>=0.2.1
+statsmodels>=0.14.0
+scipy>=1.11.0
+scikit-learn>=1.3.0
