--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ pytz
 openpyxl
 
 # Nuevas dependencias para Fase 2 - Causal Impact
-pycausalimpact>=0.2.1
+pycausalimpact==0.1.1
 statsmodels>=0.14.0
-scipy>=1.11.0
+scipy>=1.10.0
 scikit-learn>=1.3.0
